add scan history
